--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,46 +1,27 @@
-option(BUILD_JSK_PKGS "Enable building of required components of jsk_recognition_msgs and jsk_rviz_plugins" ON)
-
-if(BUILD_JSK_PKGS)
-    add_subdirectory(include/jsk_recognition_msgs)
-#     add_subdirectory(include/jsk_rviz_plugins) #TODO: allow building of rviz plugins as well
-endif()
-
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(patchworkpp)
 
-add_compile_options(-std=c++17)
-set(CMAKE_BUILD_TYPE "Release")
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
-set(CMAKE_CXX_STANDARD 14)
+# Default to C++17
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+endif()
+
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(catkin REQUIRED COMPONENTS
-        roscpp
-        rospy
-        std_msgs
-        roslaunch
-        cv_bridge
-        pcl_conversions
-        pcl_ros
-        geometry_msgs
-        laser_geometry
-        sensor_msgs
-        message_generation
-        jsk_recognition_msgs
-)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-find_package(OpenCV REQUIRED)
+# find dependencies
+find_package(ament_cmake_auto REQUIRED)
+ament_auto_find_build_dependencies()
 
-generate_messages(
-        DEPENDENCIES
-        std_msgs
-        geometry_msgs
-        sensor_msgs
-)
-
-find_package(PCL 1.7 REQUIRED)
-find_package(Boost 1.54 REQUIRED)
 find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -48,27 +29,29 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-catkin_package(
-        INCLUDE_DIRS
-        LIBRARIES
-        CATKIN_DEPENDS roscpp rospy std_msgs
+# message generation
+ament_auto_generate_code()
+
+ament_auto_add_executable(demo src/demo.cpp)
+
+# export information to downstream packages
+ament_auto_package(
+  CONFIG_EXTRAS "${PROJECT_NAME}-extras.cmake"
 )
 
-include_directories(
-        ${catkin_INCLUDE_DIRS}
-        ${PCL_INCLUDE_DIRS}
-        ${OpenCV_INCLUDE_DIRS}
-        include
-)
+# tests
+if(AMENT_ENABLE_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
 
-add_executable(offline_kitti src/offline_kitti.cpp)
-target_link_libraries(offline_kitti ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
-add_dependencies(offline_kitti patchworkpp_generate_messages_cpp)
+  #ament_add_gtest(${PROJECT_NAME}_gtest test/my_test.cpp)
+  #target_link_libraries(${PROJECT_NAME}_gtest ${rclcpp_LIBRARIES} ${rmw_connext_cpp_LIBRARIES} ${std_interfaces})
 
-add_executable(demo src/demo.cpp)
-target_link_libraries(demo ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
-add_dependencies(demo patchworkpp_generate_messages_cpp)
-
-add_executable(video src/video.cpp)
-target_link_libraries(video ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
-add_dependencies(video patchworkpp_generate_messages_cpp)
+  # the following line skips the linter which checks for copyrights
+  # uncomment the line when a copyright and license is not present in all source files
+  #set(ament_cmake_copyright_FOUND TRUE)
+  # the following line skips cpplint (only works in a git repo)
+  # uncomment the line when this package is not in a git repo
+  #set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
